--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <Meta name="author" content="Phillip M.">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="C:\Users\Owner\Downloads\four-card-feature-section-master\four-card-feature-section-master\styles.css">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Four card feature section</title>
 
