--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <Meta name="author" content="Phillip M.">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/icon-team-builder.svg">
   <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Four card feature section</title>
